fix nav hover on firefox

--- a/css/sass/partials/_columns.scss
+++ b/css/sass/partials/_columns.scss
@@ -18,7 +18,6 @@
 }
 .col4 {
     display: inline-block;
-    width: 25%;
-    min-width: 300px;
+    width: 300px;
     padding: 20px;
 }
